WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
232318
Possible non-unified build issues
https://bugs.webkit.org/show_bug.cgi?id=232318
Summary
Possible non-unified build issues
Nina Kolesová
Reported
2021-10-26 10:42:21 PDT
Since the recent refactors regarding moves to standard std:: containers as well as the JSC ArrayBuffer refactoring, there have been issues with forward declarations in Mac builds (both 10.15 Intel and 11 arm64) in the Playwright project. My current suspicion is that the patches in Playwright change the way builds are unified, which exposes missing includes, but have no good way to explicitly verify that. Therefore, I will raise a patch here that contains the includes that need to be added to make that build again, to get comments.
Attachments
possible patch
(1.62 KB, patch)
2021-10-26 10:43 PDT
,
Nina Kolesová
no flags
Details
Formatted Diff
Diff
fixed patch
(1.62 KB, patch)
2021-10-26 10:47 PDT
,
Nina Kolesová
fujii
: review+
fujii
: commit-queue-
Details
Formatted Diff
Diff
fixed style (no functional changes)
(1.62 KB, patch)
2021-10-28 03:45 PDT
,
Nina Kolesová
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Nina Kolesová
Comment 1
2021-10-26 10:43:11 PDT
Created
attachment 442507
[details]
possible patch
Nina Kolesová
Comment 2
2021-10-26 10:47:18 PDT
Created
attachment 442508
[details]
fixed patch apologies, somehow i submitted a malformed patch
Fujii Hironori
Comment 3
2021-10-27 13:54:19 PDT
Comment on
attachment 442508
[details]
fixed patch View in context:
https://bugs.webkit.org/attachment.cgi?id=442508&action=review
> Source/WebKit/UIProcess/Cocoa/SOAuthorization/SubFrameSOAuthorizationSession.h:34 > +#include <variant>
style checker EWS is failing. ERROR: Source/WebKit/UIProcess/Cocoa/SOAuthorization/SubFrameSOAuthorizationSession.h:34: Alphabetical sorting problem. [build/include_order] [4]
Fujii Hironori
Comment 4
2021-10-27 14:04:43 PDT
(In reply to Daniel Kolesa from
comment #0
)
> but have no good way to explicitly verify that.
There is a experimental CMake build of Mac port, and CMake has ENABLE_UNIFIED_BUILDS option. However, this patch looks no problem to me.
Nina Kolesová
Comment 5
2021-10-28 03:45:43 PDT
Created
attachment 442688
[details]
fixed style (no functional changes) well then, thanks fixed style
Don Olmstead
Comment 6
2021-10-28 09:58:53 PDT
Comment on
attachment 442688
[details]
fixed style (no functional changes) View in context:
https://bugs.webkit.org/attachment.cgi?id=442688&action=review
I'll just r+ this on Fujii's behalf but in the future that's the workflow when you get an r+ but a cq-.
> Source/WebKit/ChangeLog:6 > + Reviewed by NOBODY (OOPS!).
When you get an r+ in a previous patch with nits what you do is you replace the `NOBODY (OOPS!)` and then a cq+ is all that's needed.
Don Olmstead
Comment 7
2021-10-28 10:00:38 PDT
(In reply to Don Olmstead from
comment #6
)
> Comment on
attachment 442688
[details]
> fixed style (no functional changes) > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=442688&action=review
> > I'll just r+ this on Fujii's behalf but in the future that's the workflow > when you get an r+ but a cq-. > > > Source/WebKit/ChangeLog:6 > > + Reviewed by NOBODY (OOPS!). > > When you get an r+ in a previous patch with nits what you do is you replace > the `NOBODY (OOPS!)` and then a cq+ is all that's needed.
In this case the line would've been Reviewed by Fujii Hironori. You can just search the ChangeLog and copy paste the reviewer's name from there.
EWS
Comment 8
2021-10-28 10:02:20 PDT
Committed
r284990
(
243636@main
): <
https://commits.webkit.org/243636@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 442688
[details]
.
Radar WebKit Bug Importer
Comment 9
2021-10-28 10:03:21 PDT
<
rdar://problem/84762460
>
Nina Kolesová
Comment 10
2021-10-29 05:42:05 PDT
> I'll just r+ this on Fujii's behalf but in the future that's the workflow > when you get an r+ but a cq-.
noted, thanks
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug