Non-unified build fixes https://bugs.webkit.org/show_bug.cgi?id=232318

Patch by Daniel Kolesa <dkolesa@igalia.com> on 2021-10-28
Reviewed by Don Olmstead.

* UIProcess/API/APIWebAuthenticationAssertionResponse.cpp:
* UIProcess/Cocoa/SOAuthorization/SubFrameSOAuthorizationSession.h:


Canonical link: https://commits.webkit.org/243636@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@284990 268f45cc-cd09-0410-ab3c-d52691b4dbfc